k8s/analysis-py.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analysis-py
  labels:
    tier: msvc
    name: analysis-py
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: msvc
      name: analysis-py
      component: backend
  template:
    metadata:
      labels:
        tier: msvc
        name: analysis-py
        component: backend
    spec:
      # initContainers:
      # - name: check-rabbitmq
      #   image: busybox
      #   command:
      #   - /bin/sh
      #   - -c
      #   - while [[ `nc -zv ${RABBITMQ_HOST} ${RABBITMQ_PORT}` -ne 0 ]]; do sleep 10; done;
      #   env:
      #   - name: RABBITMQ_HOST
      #     valueFrom:
      #       configMapKeyRef:
      #         name: env-vars
      #         key: RABBITMQ_HOST
      #   - name: RABBITMQ_PORT
      #     valueFrom:
      #       configMapKeyRef:
      #         name: env-vars
      #         key: RABBITMQ_PORT
      containers:
      - name: analysis-py
        image: guitou-app/msvc-analysis-py
