k8s/auth-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  labels:
    name: auth-api
    component: backend
    tier: msvc
spec:
  selector:
    name: auth-api
    component: backend
    tier: msvc
  ports:
  - port: 6000
    protocol: TCP
    targetPort: 6000
    name: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  labels:
    name: auth-api
    component: backend
    tier: msvc
spec:
  replicas: 1
  selector:
    matchLabels:
      name: auth-api
      component: backend
      tier: msvc
  template:
    metadata:
      labels:
        name: auth-api
        component: backend
        tier: msvc
    spec:
      containers:
      - name: auth-api
        image: guitou-app/msvc-auth-api
        ports:
        - name: http
          containerPort: 6000
        volumeMounts:
        - name: jwt-keys
          mountPath: /var/lib/jwt-keys
      volumes:
      - name: jwt-keys
        configMap:
          name: jwt-keys
          items:
          - key: JWT_PRIVATE_KEY
            path: jwtRS256.key
