k8s/generator-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: generator-api
  labels:
    name: generator-api
    tier: msvc
    component: backend  
spec:
  selector:
    name: generator-api
    tier: msvc
    component: backend  
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator-api
  labels:
    name: generator-api
    tier: msvc
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: generator-api
      tier: msvc
      component: backend
  template:
    metadata:
      labels:
        name: generator-api
        tier: msvc
        component: backend
    spec:
      containers:
      - name: generator-api
        image: guitou-app/msvc-generator-api
        # Must add readinessProbe because it can arrive that gRPC connection 
        # To Project API is not effective
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        volumeMounts:
        - mountPath: /app-generated
          name: msvc-app-folder
      volumes:
      - name: msvc-app-folder
        persistentVolumeClaim:
          claimName: generator-pvc
