k8s/mongodb.yaml
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: mongo-pv
#   labels:
#     name: mongo
# spec:
#   storageClassName: manual
#   capacity:
#     storage: 200Mi
#   hostPath:
#     path: /home/maelfosso/Documents/Projects/Guitou/msvc/volumes/db/data/db
#   accessModes:
#   - ReadWriteOnce
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: mongo-pvc
#   labels:
#     name: mongo
# spec:
#   storageClassName: manual
#   resources:
#     requests:
#       storage: 200Mi
#   accessModes:
#   - ReadWriteOnce
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-headless
  labels:
    name: mongo
    tier: db
    component: backend
spec:
  clusterIP: None
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    name: mongo
    tier: db
    component: backend
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    name: mongo
    tier: db
    component: backend
spec:
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      storageClassName: standard
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
  serviceName: mongo-headless
  selector:
    matchLabels:
      name: mongo
      tier: db
      component: backend
  replicas: 1
  template:
    metadata:
      labels:
        name: mongo
        tier: db
        component: backend
    spec:
      containers:
      - name: mongo
        image: mongo:4.2
        args:
          - --bind_ip
          - 0.0.0.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
      # volumes:
      # - name: mongo-data
      #   persistentVolumeClaim:
      #     claimName: mongo-pvc
