k8s/projects-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: projects-api
  labels:
    name: projects-api
    tier: msvc
    component: backend
spec:
  selector:
    name: projects-api
    tier: msvc
    component: backend
  ports:
  - name: http   
    port: 3000
    targetPort: 3000
    protocol: TCP
  - name: grpc
    port: 50051
    targetPort: 50051
    protocol: TCP
  # type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects-api
  labels:
    name: projects-api
    tier: msvc
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: projects-api
      tier: msvc
      component: backend
  template:
    metadata:
      labels:
        name: projects-api
        tier: msvc
        component: backend
    spec:
      containers:
      - name: projects-api
        image: guitou-app/msvc-projects-api
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        - name: grpc
          containerPort: 50051
          protocol: TCP
