k8s/rabbitmq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
spec:
  clusterIP: None
  selector:
    name: rabbitmq
    component: backend
    tier: broker
  ports:
  - name: amqp
    port: 5672
    protocol: TCP
  - name: management
    port: 15672
    protocol: TCP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
    component: backend
    tier: broker
spec:
  serviceName: rabbitmq-headless
  selector:
    matchLabels:
      name: rabbitmq
      component: backend
      tier: broker
  template:
    metadata:
      labels:
        name: rabbitmq
        component: backend
        tier: broker
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.8-management-alpine
        ports:
        - name: amqp
          containerPort: 5672
          protocol: TCP
        - name: management
          containerPort: 15672
          protocol: TCP
        volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/lib/rabbitmq/mnesia
  volumeClaimTemplates:
  - metadata:
      name: rabbitmq-data
    spec:
      storageClassName: standard
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
