k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: 'true'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: api.guitou.local
    http:
      paths:
      - path: /api/projects/?(.*)
        pathType: Prefix
        backend:
          service:
            name: projects-api
            port:
              number: 3000
      - path: /api/generate/?(.*)
        pathType: Prefix
        backend:
          service:
            name: generator-api
            port:
              number: 8000
      - path: /api/auth/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-api
            port:
              number: 6000
